Added test suite for MapLayout.test. Removed StyleCheck errors in MapLayout. added getIngredientName method in IngredientStationHandlerComponenet (for MapLayout testing purposes - to differentiate between beef and chocolate fridges)