@@ -1,19 +1,19 @@
 package com.csse3200.game.services;
 
-import com.badlogic.gdx.graphics.g2d.TextureAtlas;
-import com.badlogic.gdx.physics.box2d.Body;
-import com.badlogic.gdx.scenes.scene2d.Stage;
-import com.badlogic.gdx.utils.viewport.Viewport;
+import com.badlogic.gdx.graphics.Texture;
+import com.badlogic.gdx.math.Vector2;
 import com.csse3200.game.GdxGame;
 import com.csse3200.game.areas.map.BenchGenerator;
 import com.csse3200.game.areas.terrain.TerrainFactory;
+import com.csse3200.game.components.Component;
+import com.csse3200.game.components.station.*;
 import com.csse3200.game.entities.Entity;
 import com.csse3200.game.areas.map.Map;
 import com.csse3200.game.entities.EntityService;
 import com.csse3200.game.entities.benches.Bench;
+import com.csse3200.game.entities.factories.StationFactory;
 import com.csse3200.game.events.listeners.EventListener0;
 import com.csse3200.game.extensions.GameExtension;
-import com.csse3200.game.physics.PhysicsEngine;
 import com.csse3200.game.physics.PhysicsService;
 import com.csse3200.game.physics.components.PhysicsComponent;
 import com.csse3200.game.rendering.RenderService;
@@ -32,55 +32,37 @@ import static org.mockito.Mockito.*;
 class MapLayoutTest {
     private AutoCloseable mocks;
     @Mock Map map;
-    @Mock Viewport viewport;
     @Spy MapLayout mapLayoutSpy;
-    @Mock TextureAtlas atlas;
-    @Mock MapLayout mapLayoutmock;
+    @Mock MapLayout mapLayoutMock;
     @Mock TerrainFactory factory;
-    int benchesCreated = 0;
     public String[] validStations = new String[14];
+
 
     @BeforeEach
     void setUp() {
+        mocks = MockitoAnnotations.openMocks(this);
+
         GameTime gameTime = mock(GameTime.class);
-        //when(gameTime.getTime()).thenReturn(0L);
         ServiceLocator.registerTimeSource(gameTime);
 
 //      SARAH'S BIT ____
         ResourceService resourceService = mock(ResourceService.class);
-//
-        TerrainFactory factory = mock(TerrainFactory.class);
-//
-        ServiceLocator.registerRenderService(new RenderService());
-        ServiceLocator.registerPhysicsService(new PhysicsService());
-        ServiceLocator.registerEntityService(new EntityService());
-        ServiceLocator.registerEntityService(new EntityService());
-        ServiceLocator.registerResourceService(resourceService);
-
-        mocks = MockitoAnnotations.openMocks(this);
-
-        RenderService renderService = mock(RenderService.class);
         EntityService entityService = mock(EntityService.class);
+        RenderService renderService = mock(RenderService.class);
 
-        PhysicsService physicsService = mock(PhysicsService.class);
-        Stage stage = mock(Stage.class);
+        ServiceLocator.registerRenderService(renderService);
+        ServiceLocator.registerPhysicsService(new PhysicsService());
+        ServiceLocator.registerEntityService(entityService);
+        ServiceLocator.registerResourceService(resourceService);
+        ServiceLocator.registerPhysicsComponent(new PhysicsComponent());
 
-        PhysicsComponent physicsComponent = mock(PhysicsComponent.class);
-        Body body = mock(Body.class);
+
 
         validStations = new String[]{"b", "s", "u", "t", "c", "a", "E", "O", "B", "C", "G", "N", "S", "F"};
-        ServiceLocator.registerEntityService(entityService);
-        ServiceLocator.registerEntityService(entityService);
-        ServiceLocator.registerRenderService(renderService);
-
-        ServiceLocator.registerPhysicsEngine(mock(PhysicsEngine.class));
-        ServiceLocator.registerPhysicsComponent(physicsComponent);
-        ServiceLocator.registerPhysicsService(physicsService);
-        ServiceLocator.registerResourceService(resourceService);
 
         factory = mock(TerrainFactory.class);
 
-        mapLayoutmock = mock(MapLayout.class);
+        mapLayoutMock = mock(MapLayout.class);
 
         mapLayoutSpy = spy(new MapLayout());
         ServiceLocator.registerMapLayout(mapLayoutSpy);
@@ -95,11 +77,11 @@ class MapLayoutTest {
         ServiceLocator.clear();
     }
 
-    /**
+
     @Test
     void shouldInitializeEventHandlerProperly() {
 
-        //event handler has been initalised
+        //event handler has been initialised
         assertNotNull(mapLayoutSpy.getEvents());
 
         //Event handler handles and triggers a given event
@@ -108,67 +90,18 @@ class MapLayoutTest {
         mapLayoutSpy.getEvents().trigger("mockEvent");
         verify(mockListener).handle();
     }
-    */
+
 
     @Test
     void testLoad() {
-        when(mapLayoutSpy.parseLine(any(String[].class), anyInt(), anyInt())).thenReturn(new ArrayList<Bench>());
+        when(mapLayoutSpy.parseLine(any(String[].class), anyInt(), anyInt())).thenReturn(new ArrayList<>());
 
-        Map map = mapLayoutSpy.load(GdxGame.LevelType.LEVEL_1);
+        mapLayoutSpy.load(GdxGame.LevelType.LEVEL_1);
 
         verify(mapLayoutSpy).parseLine("X09 Y02 Y97".split(""), 4, 0);
         verify(mapLayoutSpy).parseLine("X09 Y02 Y97".split(""), 4, 4);
         verify(mapLayoutSpy).parseLine("X09 Y02 Y97".split(""), 4, 8);
     }
-
-    /**
-     @Test
-     void testReadBench() {
-         try(MockedConstruction<BenchGenerator> benchGenerator =
-         Mockito.mockConstruction(BenchGenerator.class)){
-
-             when(mapLayoutmock.readBench(anyString(), anyInt(), anyInt(), anyInt()))
-             .thenReturn(new ArrayList<Bench>());
-
-             when(mapLayoutmock.readStation(anyString(), anyInt(), anyInt()))
-             .thenReturn(mock(Entity.class));
-
-             when(mapLayoutmock.load(GdxGame.LevelType.LEVEL_1)).thenReturn(mock(Map.class));
-
-             map = mapLayoutmock.load(GdxGame.LevelType.LEVEL_1);
-             System.out.println(map.getBenches());
-             assertEquals(0, map.getNumBenches());
-         }
-
-     }
-    */
-
-    /**
-     @Test
-     void testReadStation() {
-     //when(mapLayoutmock.readBench(anyString(), anyInt(), anyInt(), anyInt()))
-     //      .thenReturn(new ArrayList<Bench>());
-     //when(mapLayoutmock.readStation(anyString(), anyInt(), anyInt()))
-     //    .thenReturn(mock(Entity.class));
-
-     try(MockedConstruction<BenchGenerator> benchGenerator =
-     Mockito.mockConstruction(BenchGenerator.class)){
-
-             when(mapLayoutmock.readBench(anyString(), anyInt(), anyInt(), anyInt()))
-             .thenReturn(new ArrayList<Bench>());
-
-             when(mapLayoutmock.readStation(anyString(), anyInt(), anyInt()))
-             .thenReturn(mock(Entity.class));
-
-             when(mapLayoutmock.load(GdxGame.LevelType.LEVEL_1)).thenReturn(mock(Map.class));
-
-             map = mapLayoutmock.load(GdxGame.LevelType.LEVEL_1);
-             System.out.println(map.getBenches());
-             assertEquals(0, map.getNumBenches());
-         }
-
-     }
-     */
 
     @Test
     void validateStations() {
@@ -185,8 +118,8 @@ class MapLayoutTest {
             ArrayList<Bench> bench = mapLayoutSpy.parseLine("X41".split(""), 0, 0);
             ArrayList<Bench> expectedBench = BenchGenerator.singleBench(4,0);
             //checks coordinates -> can't compare benches directly as hash codes conflict
-            assertEquals(bench.get(0).getX(), expectedBench.get(0).getX());
-            assertEquals(bench.get(0).getY(), expectedBench.get(0).getY());
+            assertEquals(bench.getFirst().getX(), expectedBench.getFirst().getX());
+            assertEquals(bench.getFirst().getY(), expectedBench.getFirst().getY());
         }
     }
 
@@ -200,6 +133,27 @@ class MapLayoutTest {
             //checks coordinates -> can't compare benches directly as hash codes conflict
 
             //coordinates of starting bench
+            assertEquals(bench.getFirst().getX(), expectedBench.getFirst().getX());
+            assertEquals(bench.getFirst().getY(), expectedBench.getFirst().getY());
+
+            //coordinates of ending bench -> assumes bench row loads properly (tested in
+            // benchGenerator)
+            assertEquals(bench.get(2).getX(), expectedBench.get(2).getX());
+            assertEquals(bench.get(2).getY(), expectedBench.get(2).getY());
+        }
+    }
+
+    @Test
+    void readBenchColumn() {
+        try(MockedConstruction<Bench> ignored =
+                    Mockito.mockConstruction(Bench.class))
+        {
+            ArrayList<Bench> bench = mapLayoutSpy.parseLine("Y43".split(""), 0, 0);
+            ArrayList<Bench> expectedBench = BenchGenerator.createBenchColumn(8, -4,
+                    -1);
+            //checks coordinates -> can't compare benches directly as hash codes conflict
+
+            //coordinates of starting bench
             assertEquals(bench.get(0).getX(), expectedBench.get(0).getX());
             assertEquals(bench.get(0).getY(), expectedBench.get(0).getY());
 
@@ -210,48 +164,110 @@ class MapLayoutTest {
         }
     }
 
-//    FOR PARAMETRISED TESTING _____
-//
-//    void testReadBench(String type, int startCol, int size, int row) {
-//
-//        try(MockedConstruction<BenchGenerator> benchGenerator =
-//                    Mockito.mockConstruction(BenchGenerator.class)) {
-//
-//            ArrayList<Bench> bench = mapLayoutSpy.readBench(type, startCol, size, row);
-//
-//            // assert bench read is right
-//            if (size == 1) {
-//                switch (type) {
-//                    case "X":
-//                        verify(benchGenerator).singleBench(startCol + 4, row - 4);
-//                        break;
-//                    case "Q":
-//                        assertEquals(bench, benchGenerator.singleShadowBench(startCol + 4, row - 4));
-//                        break;
-//                    case "P":
-//                        assertEquals(bench, benchGenerator.singleBlocker(startCol + 4, row - 4));
-//                        break;
-//                    default:
-//                        assertTrue(true);
-//                }
-//            } else {
-//                switch (type) {
-//                    case "X":
-//                        assertEquals(bench, benchGenerator.createBenchRow(startCol + 4, startCol + size +4, row - 4));
-//                        break;
-//                    case "Y":
-//                        benchGenerator.createBenchColumn(startCol + 4, row - 4, row + size - 4);
-//                        break;
-//                    default:
-//                        assertTrue(true);
-//                }
-//            }
-//
-//
-//        }
-//
-//
-//
-//    }
+    @Test
+    void bananaTest() {
+        stationTest("b", 4, 4);
+    }
+
+    @Test
+    void cuttingBoardTest() {
+        stationTest("G", 6, 2);
+    }
+
+    @Test
+    void stoveTest() {
+        stationTest("E", 2, 2);
+    }
+
+    @Test
+    void strawberryTestPara() {
+        stationTest("s", 7, 3);
+    }
+
+    @Test
+    void beefFridgeTestPara() {
+        stationTest("B", 1, 1);
+    }
+
+
+    void stationTest(String type, int x, int y) {
+        try(MockedConstruction<StationFactory> ignored =
+                    Mockito.mockConstruction(StationFactory.class)) {
+
+            Texture texture = mock(Texture.class);
+            when(ServiceLocator.getResourceService().getAsset(anyString(), eq(Texture.class))).thenReturn(texture);
+
+            Entity readStation = mapLayoutSpy.readStation(type, x, y);
+            switch (type) {
+                case "b":
+                    assertEquals("bananaTree", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    break;
+                case "s":
+                    assertEquals("strawberriesStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    break;
+                case "u":
+                    assertEquals("lettuceStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    break;
+                case "t":
+                    assertEquals("tomatoStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    break;
+                case "c":
+                    assertEquals("cucumberStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    break;
+                case "a":
+                    assertEquals("acaiStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    break;
+                case "E":
+                    assertEquals("stove", readStation.getComponent(StationItemHandlerComponent.class).getType());
+                    break;
+                case "O":
+                    assertEquals("oven", readStation.getComponent(StationItemHandlerComponent.class).getType());
+                    break;
+                case "B":
+                    assertEquals("beefStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    assertEquals("beef", readStation.getComponent(IngredientStationHandlerComponent.class).getIngredientName());
+                    break;
+                case "C":
+                    assertEquals("beefStation", readStation.getComponent(IngredientStationHandlerComponent.class).getType());
+                    assertEquals("chocolate", readStation.getComponent(IngredientStationHandlerComponent.class).getIngredientName());
+                    break;
+                case "G":
+                    assertEquals("cutting board", readStation.getComponent(StationItemHandlerComponent.class).getType());
+                    break;
+                case "N":
+                    boolean isABin = false;
+                    for (Component component : readStation.getCreatedComponents()) {
+                        if (component instanceof StationBinComponent) {
+                            isABin = true;
+                            break;
+                        }
+                    }
+                    assertTrue(isABin);
+                    break;
+                case "S":
+                    boolean isSubmissionWindow = false;
+                    for (Component component : readStation.getCreatedComponents()) {
+                        if (component instanceof StationServingComponent) {
+                            isSubmissionWindow = true;
+                            break;
+                        }
+                    }
+                    assertTrue(isSubmissionWindow);
+                    break;
+                case "F":
+                    boolean isFireExtinguisher = false;
+                    for (Component component : readStation.getCreatedComponents()) {
+                        if (component instanceof FireExtinguisherHandlerComponent) {
+                            isFireExtinguisher = true;
+                            break;
+                        }
+                    }
+                    assertTrue(isFireExtinguisher);
+                    break;
+            }
+
+            assertEquals(readStation.getPosition(), new Vector2(x + 4, y - 4));
+        }
+    }
 
 }
